RESOLVED FIXED12701
REGRESSION: After javascript, onChange not triggered when selecting same option
https://bugs.webkit.org/show_bug.cgi?id=12701
Summary REGRESSION: After javascript, onChange not triggered when selecting same option
Kevin M. Dean
Reported 2007-02-08 13:44:37 PST
If you have a form select and you choose and option, then use javascript to reset it's value or change the selected option to another option, the next time you use that select to choose the original option it doesn't detect and fire an onChange. Works in Safari, Firefox, IE.
Attachments
sample code (1.18 KB, text/html)
2007-02-08 13:45 PST, Kevin M. Dean
no flags
Sample Code (1.18 KB, text/html)
2007-02-08 13:50 PST, Kevin M. Dean
no flags
proposed fix (4.79 KB, patch)
2007-02-09 12:12 PST, Alexey Proskuryakov
aroben: review+
Kevin M. Dean
Comment 1 2007-02-08 13:45:29 PST
Created attachment 13064 [details] sample code
Kevin M. Dean
Comment 2 2007-02-08 13:50:25 PST
Created attachment 13065 [details] Sample Code
Alexey Proskuryakov
Comment 3 2007-02-09 12:12:21 PST
Created attachment 13089 [details] proposed fix I'm not sure if I understood this code well enough, but this fixes the bug and passes existing tests. When testing this, I noticed a separate regression with list boxes - an onchange event gets dispatched when clicking on an already selected element, if it was selected from JS. Going to file a new bug.
Alexey Proskuryakov
Comment 4 2007-02-10 07:27:57 PST
Filed bug 12725 for listbox issues.
Adam Roben (:aroben)
Comment 5 2007-02-10 14:02:35 PST
Comment on attachment 13089 [details] proposed fix r=me
Sam Weinig
Comment 6 2007-02-10 15:39:03 PST
Regressions are P1.
Sam Weinig
Comment 7 2007-02-10 17:55:02 PST
Alexey, can this be tested in DRT? If not, please add a test to the manuel-tests directory instead.
Alexey Proskuryakov
Comment 8 2007-02-11 00:38:44 PST
Committed revision 19563. (In reply to comment #7) > Alexey, can this be tested in DRT? If not, please add a test to the > manuel-tests directory instead. It cannot be tested in DRT - but the test is already in manual-tests. Or did I misunderstand you?
Note You need to log in before you can comment on or make changes to this bug.