third_party/WebKit/WebCore/html/HTMLSelectElement.cpp
@@ -167,6 +167,9 @@ void HTMLSelectElement::setSelectedIndex(int optionIndex, bool deselect, bool fi
     int listIndex = optionToListIndex(optionIndex);
     HTMLOptionElement* element = 0;
 
+    // Make a local copy, since setSelected() can update m_lastOnChangeIndex.
+    int lastOnChangeIndex = m_lastOnChangeIndex;
+
     if (listIndex >= 0) {
         element = static_cast<HTMLOptionElement*>(items[listIndex]);
         element->setSelected(true);
@@ -182,11 +185,9 @@ void HTMLSelectElement::setSelectedIndex(int optionIndex, bool deselect, bool fi
             setActiveSelectionEndIndex(listIndex);
     }
 
-    if (usesMenuList() && m_lastOnChangeIndex != optionIndex) {
-        m_lastOnChangeIndex = optionIndex;
-        if (fireOnChange)
-            onChange();
-    }
+    ASSERT(m_lastOnChangeIndex == -1 || m_lastOnChangeIndex == optionIndex);
+    if (fireOnChange && usesMenuList() && lastOnChangeIndex != optionIndex)
+        onChange();
 }
 
 int HTMLSelectElement::activeSelectionStartListIndex() const
@@ -557,14 +558,15 @@ void HTMLSelectElement::reset()
     m_lastOnChangeIndex = -1;
 }
 
-void HTMLSelectElement::notifyOptionSelected(HTMLOptionElement *selectedOption, bool selected)
- {
+void HTMLSelectElement::notifyOptionSelected(HTMLOptionElement* selectedOption, bool selected)
+{
     if (selected && !m_multiple)
         deselectItems(selectedOption);
 
     if (renderer() && !usesMenuList())
         static_cast<RenderListBox*>(renderer())->selectionChanged();
 
+    m_lastOnChangeIndex = selectedOption->index();
     setChanged(true);
 }
 
